<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileEditFacilityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A334C">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Facility Profile"
        android:textColor="#F8F6F6"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/editProfilePhoto"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Edit Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/removeFacilityProfilePictureButton"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Remmove Profile Photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/facilityEditProfilePhoto"
        android:layout_width="111dp"
        android:layout_height="107dp"
        android:background="@drawable/rounded_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:text="Name"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility name"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:text="Email"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3sp"
            android:text="Mobile Number"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility mobile"
                android:inputType="phone"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3sp"
            android:text="Location"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility location"
                android:inputType="text"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/darker_teal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />


</androidx.constraintlayout.widget.ConstraintLayout>