...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_pages">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/profileDetailsActivityFragment"
        android:name="com.example.tigers_lottery.Admin.AdminDashboardFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/secondary_background_cards"
        app:layout_constraintBottom_toBottomOf="parent"
...
