...
            android:text="facility location"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Facility Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
