<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileEditFacilityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A334C">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit User Profile"
        android:textColor="#F8F4F4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/editUserProfilePhoto"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Edit Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/removeUserProfilePictureButton"
        android:layout_width="43dp"
        android:layout_height="29dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Edit Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/userEditProfilePhoto"
        android:layout_width="111dp"
        android:layout_height="107dp"
        android:background="@drawable/rounded_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First Name"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user_first_name"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:text="Name"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user last_name"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3sp"
            android:text="Email"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user email"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3sp"
            android:text="Date of Birth"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="true"
                android:focusable="false"
                android:hint="user birthday"
                android:inputType="none"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3sp"
            android:text="Mobile Number(Optional)"
            android:textColor="@color/white" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user mobile"
                android:inputType="phone"
                android:background="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.card.MaterialCardView>

        <CheckBox
            android:id="@+id/checkboxNotificationsEnabled"
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:buttonTint="#FFFFFF"
            android:text="Enable Notifications?"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.864" />

    </LinearLayout>

    <Button
        android:id="@+id/saveChangesUserProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darker_teal"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />


</androidx.constraintlayout.widget.ConstraintLayout>