...
        android:layout_width="276dp"
        android:layout_height="43dp"
        android:background="#00FFFFFF"
        android:text="Are you an Admin ?"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/editUserProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:strokeColor="#AA00FF" />

...
